# BlackHorizon

./: .gitignore  README.md  pyproject.toml
blackhorizon/: __init__.py  backend.py  camera.py  frames.py  geodesics.py  imaging.py  integrators.py  kerr.py  tracer.py  vaidya.py
blackhorizon/dynamics/: __init__.py  peters.py  pn_nbody.py  tde.py
blackhorizon/emission/: __init__.py  blackbody.py  bluesheet.py  novikov_thorne.py  redshift.py
blackhorizon/examples/: benchmark.py  render_shadow.py  tde_demo.py
blackhorizon/offline/: __init__.py  camera_path.py  infall.py  inflation.py  post.py  render.py  video.py
blackhorizon/realtime/: __init__.py  app.py  engine.py  fly_camera.py  glfw_compat.py  headless.py  infall.py  reference.py  settings.py  shader_source.py  ui.py
blackhorizon/realtime/shaders/: fullscreen.vert  kerr_tracer.frag
docs/: DESIGN.md
tde_frames/: fallback_curve.csv
tests/: test_bluesheet.py  test_dynamics.py  test_emission.py  test_fly_camera.py  test_glfw_compat.py  test_gradients.py  test_integrators.py  test_interior.py  test_kerr.py  test_offline.py  test_orbits.py  test_realtime_gl.py  test_realtime_reference.py  test_settings.py  test_shadow.py  test_vaidya.py
