[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blackhorizon"
version = "0.1.0"
description = "Interactive black hole and orbital dynamics simulator (Kerr GR core engine)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pillow>=10",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13"]
realtime = ["moderngl>=5.10", "glfw>=2.6", "imgui-bundle>=1.5"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["blackhorizon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
